Remove refrences in doc template

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -4,7 +4,7 @@
 
 \title{Document title}
 \author{Emil Öhman}
-\date{2023-08-30}
+\date{\today}
 
 % Import config file
 \usepackage{config}
@@ -22,8 +22,6 @@
 This is some text inside this section!
 
 \section{This is another section}
-Inside this section, there is some also text. In \LaTeX, you can also write maths: \(\gamma=\frac{1}{sqrt{1-{\frac{v}{c}}^2}}\). Refrences also work \cite{lee2023roomtemperature}!
-
-\printbibliography
+Inside this section, there is some also text. In \LaTeX, you can also write maths: \(\gamma=\frac{1}{sqrt{1-{\frac{v}{c}}^2}}\).
 
 \end{document}
