Add indent in doc

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -12,7 +12,7 @@
 \begin{document}
 
 \makeatletter
-\huge{\textbf{\@title}}\vspace{0.33em}\\
+\noindent\huge{\textbf{\@title}}\vspace{0.33em}\\
 \Large{\@author, \@date}\normalsize
 \makeatother
 
