--- a/doc/main.tex
+++ b/doc/main.tex
@@ -10,6 +10,7 @@
 \usepackage{config}
 
 \begin{document}
+\thispagestyle{plain} % Remove header on first page
 
 \makeatletter
 \noindent\huge{\textbf{\@title}}\vspace{0.33em}\\
