Update latex doc template

--- a/doc/config.sty
+++ b/doc/config.sty
@@ -1,9 +1,12 @@
 % Packages
 \usepackage[pdfusetitle]{hyperref}
 \usepackage{csquotes}
+\usepackage{fancyhdr}
+\usepackage[total={6in,8in}]{geometry}
 
 % Config
 %\setlength{\parindent}{0pt}
+%\setlength{\parskip}{\baselineskip}
 
 % Fancy Header
 \pagestyle{fancy}
