Update Math HW template

--- a/doc/config.sty
+++ b/doc/config.sty
@@ -19,7 +19,7 @@
 \pagestyle{fancy}
 \fancyhead{}
 \makeatletter\lhead{\@title}\makeatother
-\makeatletter\rhead{\@date}\makeatother
+\makeatletter\rhead{\@author, \@date}\makeatother
 
 % Add PDF-metadata
 \makeatletter
