--- a/math_hw/main.tex
+++ b/math_hw/main.tex
@@ -9,7 +9,10 @@
 % Import config file
 \usepackage{config}
 
+\def\comments{1} % 1=show comments; 0=hide comments
+
 \begin{document}
+\thispagestyle{plain}
 
 \makeatletter
 \huge{\textbf{\@title}}\\[0.33em]
