Add T1 encoding in doc and math_hw

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper]{article}
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{t1enc}
 
 \title{Document title}
 \author{Emil Öhman}
