--- a/math_hw/main.tex
+++ b/math_hw/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper, answers]{exam}
 \usepackage[swedish]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{t1enc}
 
 \title{Title}
 \author{Emil Öhman}
